// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getRowBorderRadius Get correct row border radius for left column with three and more nested columns 1`] = `
{
  "border-bottom-left-radius": 182,
  "border-top-left-radius": 180,
}
`;

exports[`getRowBorderRadius Get correct row border radius for left column with two nested columns 1`] = `
{
  "border-bottom-left-radius": 182,
  "border-top-left-radius": 180,
}
`;

exports[`getRowBorderRadius Get correct row border radius for not lateral column with three and more nested columns 1`] = `{}`;

exports[`getRowBorderRadius Get correct row border radius for right column with three and more nested columns 1`] = `
{
  "border-bottom-right-radius": 183,
  "border-top-right-radius": 181,
}
`;

exports[`getRowBorderRadius Get correct row border radius for right column with two nested columns 1`] = `
{
  "border-bottom-right-radius": 183,
  "border-top-right-radius": 181,
}
`;

exports[`getRowBorderRadius Get correct row border radius with one nested column 1`] = `
{
  "border-bottom-left-radius": 182,
  "border-bottom-right-radius": 183,
  "border-top-left-radius": 180,
  "border-top-right-radius": 181,
}
`;
